# kanji-app-django

./: manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_kanji_character.py
api/tests/: test_flashcards_api.py  test_kanji_api.py  test_study_plan_api.py
kanjiapp/: asgi.py  settings.py  urls.py  wsgi.py
